--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
 <head>
     <title>VSU Healthcare Tracker</title>
     <script src="./js/Manager.js"></script>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-
-    <h2>This is the webpage.</h2>
+    <ul>
+        <li><a class="active" href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+      
+      <div style="padding:20px;margin-top:30px;background-color:#1abc9c;height:1500px;">
+        <h1>VSU Health Tracker</h1>
+        <h2>Scroll this page to see the effect</h2>
+        <h2>The navigation bar will stay at the top of the page while scrolling</h2>
+      
+        <p>Some text some text some text some text..</p>
+      </div>
 
 </body>
 </html>
