--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#contact">Contact</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
       
       <div style="padding:20px;margin-top:30px;background-color:rgb(230, 217, 217);height:1500px;">
-        <h1>VSU Health Tracker</h1>
+        <h1>Contact</h1>
         <h2>Scroll this page to see the effect</h2>
         <h2>The navigation bar will stay at the top of the page while scrolling</h2>
       
@@ -23,8 +23,7 @@
         </p>
 
         <h2>Instructions</h2>
-        <p> Click <a herf="userInput.html"> here </a>  and answear all questions to the best of your abilites
-        </p>
+        <p></p>
       </div>
 
 </body>
