--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
     <title>VSU Healthcare Tracker</title>
     <script src="./js/Manager.js"></script>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
     <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="./html_pages/input.html">Get Recomendations</a></li>
+        <li><a href="./html_pages/healthdata.html">Community Data</a></li>
+        <li><a href="./html_pages/resources.html">Rescources</a></li>
+        <li><a href="./html_pages/about.html">About</a></li>
       </ul>
       
       <div style="padding:20px;margin-top:30px;background-color:rgb(230, 217, 217);height:1500px;">
@@ -26,6 +28,7 @@
         <p> Click <a herf="userInput.html"> here </a>  and answear all questions to the best of your abilites
         </p>
       </div>
+
 
 </body>
 </html>
