--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -4,17 +4,18 @@
 <head>
     <title>VSU Healthcare Tracker</title>
     <script src="./js/Manager.js"></script>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="../css/about.css">
 </head>
 <body>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="input.html">Get Recomendations</a></li>
+        <li><a href="healthdata">Community Data</a></li>
+        <li><a href="resources.html">Rescources</a></li>
+        <li><a class="active" href="about.html">About</a></li>
       </ul>
-      
       <div style="padding:20px;margin-top:30px;background-color:rgb(230, 217, 217);height:1500px;">
-        <h1>Contact</h1>
+        <h1>About</h1>
         <h2>Scroll this page to see the effect</h2>
         <h2>The navigation bar will stay at the top of the page while scrolling</h2>
       
@@ -25,6 +26,5 @@
         <h2>Instructions</h2>
         <p></p>
       </div>
-
 </body>
 </html>
