--- a/html_pages/input.html
+++ b/html_pages/input.html
@@ -16,7 +16,7 @@
         <li><a href="resources.html">Rescources</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
-   
+      
 
       <div >
         <form action="submiteDate">
@@ -29,7 +29,7 @@
           <label for="age">Age</label>
           <input type="text" id="age"  placeholder="Your age">
 
-          <label for="age">Age</label>
+          <label for="sex">Sex</label>
           
           <select id="sex">
             <option value="M">Male</option>
