--- a/index.html
+++ b/index.html
@@ -14,19 +14,11 @@
         <li><a href="./html_pages/resources.html">Rescources</a></li>
         <li><a href="./html_pages/about.html">About</a></li>
       </ul>
-      
-      <div style="padding:20px;margin-top:30px;background-color:rgb(253, 250, 250);height:1500px;">
-        <h1>VSU Health Tracker</h1>
-        <h2>Scroll this page to see the effect</h2>
-        <h2>The navigation bar will stay at the top of the page while scrolling</h2>
-      
+      <div style="padding:20px;margin-top:30px;background-color:rgb(253, 250, 250);height:1500px;text-align: center;">
+        <h1>Valdosta Area Health Tracker</h1>
+        <img src="./assets/vsu.jpg" alt="vsu">
         <p>Welcome to the Valdosta State health tracker.</p>
-        <p>Here you can gage an estimate diagnosis of your current health by answearing a few questons.
-        </p>
-
-        <h2>Instructions</h2>
-        <p> Click <a herf="userInput.html"> here </a>  and answear all questions to the best of your abilites
-        </p>
+        <p>Here you can gage an estimate diagnosis of your current health by answearing a few questons.</p>
       </div>
 
 
