--- a/html_pages/input.html
+++ b/html_pages/input.html
@@ -18,6 +18,7 @@
       
 
       <div >
+        <form>
           <h2>Enter Your Information Below</h2>
           <label for="height">Height</label>
           <input type="text" id="height"  placeholder="Your height in inches...">
