--- a/html_pages/input.html
+++ b/html_pages/input.html
@@ -11,7 +11,7 @@
     <ul >
         <li><a href="../index.html">Home</a></li>
         <li><a class="active" href="input.html">Get Recomendations</a></li>
-        <li><a href="healthdata.html">Community Data</a></li>
+        <li><a href="healthdata.html">National Health Data</a></li>
         <li><a href="resources.html">Rescources</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
@@ -45,15 +45,9 @@
 
           <label for="avg">Average Daily Hours of Exercise </label>
           <input type="text" id="avg" placeholder="Your avg daily hours of exercise">
-
-         <!---  <div style="padding:20px;margin-top:30px;background-color:rgb(230, 217, 217);height:1500px;">
-          <select id="country" name="country">
-            <option value="australia">Australia</option>
-            <option value="canada">Canada</option>
-            <option value="usa">USA</option>
-          </select> -->
         
           <input type="submit" style="background-color: red;">
+          <p>Disclaimer: By using this system you authorize Valdosta Area Health Tracker to anonymously use the supplied data for current and future use cases.</p>
         </form>
        </div>
 </body>
