--- a/html_pages/resources.html
+++ b/html_pages/resources.html
@@ -10,9 +10,11 @@
     <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="input.html">Get Recomendations</a></li>
-        <li><a href="healthdata.html">Community Data</a></li>
+        <li><a href="healthdata.html">National Health Data</a></li>
         <li><a class="active" href="resources.html">Rescources</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
+
+      
 </body>
 </html>
