Changed json file to a .js array of objects for ease of storage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>VSU Healthcare Tracker</title>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="./js/data.js"></script>
     <script src="./js/Manager.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
