--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>VSU Healthcare Tracker</title>
-    <script src="./js/Manager.js"></script>
+    <script src="../js/Manager.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/about.css">
 </head>
 <body>
