--- a/html_pages/healthdata.html
+++ b/html_pages/healthdata.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>VSU Healthcare Tracker</title>
-    <script src="./js/Manager.js"></script>
+    <script src="../js/Manager.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/healthdata.css">
 </head>
 <body>
@@ -14,6 +14,6 @@
         <li><a href="resources.html">Rescources</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
-
+      <div id="curve_chart" style="width: 900px; height: 500px"></div>
 </body>
 </html>
