--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         <h1>Valdosta Area Health Tracker</h1>
         <img src="./assets/vsu.jpg" alt="vsu">
         <p>Welcome to the Valdosta State health tracker.</p>
-        <p>Here you can gage an estimate diagnosis of your current health by answearing a few questons.</p>
+        <p>Here you can compare your current health to that of the national average by answering a few questons.</p>
       </div>
-
-
 </body>
 </html>
