--- a/html_pages/healthdata.html
+++ b/html_pages/healthdata.html
@@ -6,7 +6,7 @@
     <script src="./js/Manager.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/healthdata.css">
 </head>
-<body>
+<body style="background-color:rgb(230, 217, 217)">
     <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="input.html">Get Recomendations</a></li>
