--- a/html_pages/resources.html
+++ b/html_pages/resources.html
@@ -35,6 +35,9 @@
             <tr>
               <td><a href="https://kidshealth.org/" style="color:rgb(255, 254, 254)">Kids Health</a></td>
             </tr>
+            <tr>
+                <td><a href="https://ncdrisc.org/" style="color:rgb(255, 254, 254)">Data</a></td>
+            </tr>
           </table>
       </div>
 </body>
