--- a/html_pages/healthdata.html
+++ b/html_pages/healthdata.html
@@ -16,8 +16,19 @@
         <li><a href="resources.html">Rescources</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
-    <div>      
-        <div id="curve_chart" style="width: 90px; height: 50px"></div>
+    <div>  
+        <table id="out">
+            <tr>
+                <td>YO</td>
+            </tr>
+            <tr>
+                <tr>
+                    <div id="curve_chart" style="width: 90px; height: 50px"></div>
+                </tr>  
+            </tr>
+          
+          </table>    
+
     </div>
 
 </body>
