--- a/html_pages/healthdata.html
+++ b/html_pages/healthdata.html
@@ -17,18 +17,7 @@
         <li><a href="about.html">About</a></li>
     </ul>
     <div>  
-        <table id="out">
-            <tr>
-                <td>YO</td>
-            </tr>
-            <tr>
-                <tr>
-                    <div id="curve_chart" style="width: 90px; height: 50px"></div>
-                </tr>  
-            </tr>
-          
-          </table>    
-
+        <div id="curve_chart" style="position: absolute; top: 75px; width: 900px; height: 500px;"></div>
     </div>
 
 </body>
