Added another page

--- a/html_pages/healthdata.html
+++ b/html_pages/healthdata.html
@@ -23,7 +23,7 @@
             </tr>
             <tr>
                 <tr>
-                    <div id="curve_chart" style="width: 90px; height: 50px"></div>
+                    <div id="curve_chart" style="padding:20px;margin-top:30px;"></div>
                 </tr>  
             </tr>
           
