--- a/html_pages/input.html
+++ b/html_pages/input.html
@@ -17,7 +17,7 @@
       </ul>
       
       <div >
-        <form>
+        <form action="inout.html">
           <h2>Enter Your Information Below</h2>
           <label for="height">Height</label>
           <input type="text" id="height"  placeholder="Your height in inches...">
