--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -6,7 +6,7 @@
     <script src="../js/Manager.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/about.css">
 </head>
-<bodybody style="background-color:rgb(230, 217, 217)">
+<body style="background-color:rgb(230, 217, 217)">
     <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="input.html">Get Recomendations</a></li>
