--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -15,22 +15,30 @@
         <li><a class="active" href="about.html">About</a></li>
       </ul>
 
-      <div style="padding:20px;margin-top:30px;background-color:rgb(230, 217, 217);height:1500px;">
+      <div style="padding:20px;margin-top:30px;background-color:rgb(230, 217, 217);height:1500px; text-align: center;">
         <h1>About</h1>
-        <h2>This program was developed by the brilliant minds of VSU. Below are the developers
-          of this application. </h2>
+        <p>This application was developed by students at Valdosta State University. It utilizes machine learning algorithms to provide users with
+           information on their health as well as helpful resources based on their information. Additionally, it provides useful information as to the health of the United States as a whole.
+          
 
-
-
-        <h3>This application utilizes machine learning algorithms to provide users with
-           health resources base on their input.
-           </h3>
-
-          <p>The program is trained using data from users to accurately provide health resources
+          The program is trained using data from users to accurately provide health resources
             and compare their health with their communities health.  </p>
-      
-            <h2>Instructions</h2>
-        <p></p>
+
+
+
+        <table id="links">
+          <tr>
+            <th style="text-align: center;">Sponsors</th>
+          </tr>
+          <tr>
+            <td><a href="https://www.valdosta.edu/" style="color:rgb(255, 254, 254)">Valdosta State University</a></th>
+          </tr>
+          <tr>
+            <td><a href="https://www.azaleahealth.com/" style="color:rgb(255, 254, 254)">Azalea Health</a></td>
+          </tr>
+            </table>
+            <br>
+          <img src="../assets/front.jpg" alt="front">
       </div>
 </body>
 </html>
