--- a/html_pages/resources.html
+++ b/html_pages/resources.html
@@ -16,7 +16,7 @@
       </ul>
       <div style="padding:20px;margin-top:30px;background-color:rgb(230, 217, 217);height:1500px; text-align: center;">
         <h2>Available Resources for Health Aid</h2>
-        <img src="../assets/sunset.jpg" alt="sunset">
+        <img src="../assets/veggie.jpeg" alt="veggie">
         <br><br>
 
         <table id="links">
