--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div style="padding:20px;margin-top:30px;background-color:rgb(253, 250, 250);height:1500px;text-align: center;">
         <h1>Valdosta Area Health Tracker</h1>
         <img src="./assets/vsu.jpg" alt="vsu">
-        <p>Welcome to the Valdosta State health tracker.</p>
+        <p>Welcome to the Valdosta Area Health Tracker!</p>
         <p>Here you can compare your current health to that of the national average by answering a few questons.</p>
       </div>
 </body>
