--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="./html_pages/input.html">Get Recomendations</a></li>
+        <li><a href="./html_pages/input.html">Input Data</a></li>
         <li><a href="./html_pages/healthdata.html">National Health Data</a></li>
         <li><a href="./html_pages/resources.html">Rescources</a></li>
         <li><a href="./html_pages/about.html">About</a></li>
