--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -9,7 +9,7 @@
 <body style="background-color:rgb(230, 217, 217)">
     <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="input.html">Get Recomendations</a></li>
+        <li><a href="input.html">Input Data</a></li>
         <li><a href="healthdata.html">National Health Data</a></li>
         <li><a href="resources.html">Rescources</a></li>
         <li><a class="active" href="about.html">About</a></li>
