--- a/html_pages/healthdata.html
+++ b/html_pages/healthdata.html
@@ -11,7 +11,7 @@
 <body style="background-color:rgb(230, 217, 217)">
     <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="input.html">Get Recomendations</a></li>
+        <li><a href="input.html">Input Data</a></li>
         <li><a class="active" href="healthdata">National Health Data</a></li>
         <li><a href="resources.html">Rescources</a></li>
         <li><a href="about.html">About</a></li>
