--- a/html_pages/resources.html
+++ b/html_pages/resources.html
@@ -9,7 +9,7 @@
 <bodybody style="background-color:rgb(253, 252, 252)">
     <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="input.html">Get Recomendations</a></li>
+        <li><a href="input.html">Input Data</a></li>
         <li><a href="healthdata.html">National Health Data</a></li>
         <li><a class="active" href="resources.html">Rescources</a></li>
         <li><a href="about.html">About</a></li>
